--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +11,7 @@
             rel="stylesheet"
         />
         <title>Клуб четырех коней</title>
-        <script src="./js/index.js" defer></script>
+        <script src="./js/script.js" defer></script>
     </head>
     <body>
         <section class="hero">
@@ -49,9 +49,12 @@
         <section class="support" id="support">
             <div class="container support__container">
                 <h3 class="support__title">
-                    Чтобы поддержать Международный васюкинский турнир посетите лекцию на тему:
-                    <span class="text-red">«Плодотворная дебютная идея»</span>
+                    <span>Чтобы поддержать Международный васюкинский турнир</span>
+                    <span class="support__title-span">
+                        посетите лекцию на тему: <span class="text-red">«Плодотворная дебютная идея»</span></span
+                    >
                 </h3>
+                <img class="support__img" src="./img/support.jpg" alt="support" />
             </div>
         </section>
         <section class="detailed" id="detailed">
@@ -96,9 +99,53 @@
         <section class="players">
             <div class="container">
                 <h4 class="players__title">Участники турнира</h4>
-                <ul class="players__list">
-                    <li class="players__item"></li>
-                </ul>
+                <div class="players__slider">
+                    <div class="slider">
+                        <ul class="players__list">
+                            <li class="player">
+                                <img class="player__img" src="./img/profile.png" alt="profile" />
+                                <h4 class="player__name">Хозе-Рауль Капабланка</h4>
+                                <p class="player__info">Чемпион мира по шахматам</p>
+                                <button class="btn__oval">Подробнее</button>
+                            </li>
+                            <li class="player">
+                                <img class="player__img" src="./img/profile.png" alt="profile" />
+                                <h4 class="player__name">Эммануил Ласкер</h4>
+                                <p class="player__info">Чемпион мира по шахматам</p>
+                                <button class="btn__oval">Подробнее</button>
+                            </li>
+                            <li class="player">
+                                <img class="player__img" src="./img/profile.png" alt="profile" />
+                                <h4 class="player__name">Александр Алехин</h4>
+                                <p class="player__info">Чемпион мира по шахматам</p>
+                                <button class="btn__oval">Подробнее</button>
+                            </li>
+                            <li class="player">
+                                <img class="player__img" src="./img/profile.png" alt="profile" />
+                                <h4 class="player__name">Арон Нимцович</h4>
+                                <p class="player__info">Чемпион мира по шахматам</p>
+                                <button class="btn__oval">Подробнее</button>
+                            </li>
+                            <li class="player">
+                                <img class="player__img" src="./img/profile.png" alt="profile" />
+                                <h4 class="player__name">Рихард Рети</h4>
+                                <p class="player__info">Чемпион мира по шахматам</p>
+                                <button class="btn__oval">Подробнее</button>
+                            </li>
+                            <li class="player">
+                                <img class="player__img" src="./img/profile.png" alt="profile" />
+                                <h4 class="player__name">Остап Бендер</h4>
+                                <p class="player__info">Чемпион мира по шахматам</p>
+                                <button class="btn__oval">Подробнее</button>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="players__slider_btns">
+                        <button class="btn__round left"></button>
+                        <span>1 / 3</span>
+                        <button onclick="click" class="btn__round right"></button>
+                    </div>
+                </div>
             </div>
         </section>
         <div class="running__line">
