--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     </div>
                     <div class="players__slider_btns">
                         <button class="btn__round left"></button>
-                        <span>1 / 3</span>
+                        <span class="count-slide">1</span>/<span>6</span>
                         <button onclick="click" class="btn__round right"></button>
                     </div>
                 </div>
