доработан класс слайдера и отрисовка слайдера или grid сетки для блока с самолетом

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             rel="stylesheet"
         />
         <title>Клуб четырех коней</title>
-        <script src="./js/sliderCards.js" defer></script>
+        <script src="./js/scriptUtils.js" defer></script>
         <script src="./js/slider.js" defer></script>
         <script src="./js/script.js" defer></script>
     </head>
@@ -96,9 +96,6 @@
                 </div>
                 <div class="stages__content">
                     <img class="plane" src="./img/Plane.png" alt="Plane">
-                    <ul class="stages__list">
-                    
-                    </ul>
                 </div>
             </div>
         </section>
